fix spacing for forum-row on larger screens

--- a/assets/less/sugar/component/content.less
+++ b/assets/less/sugar/component/content.less
@@ -3,11 +3,11 @@
 \*------------------------------------*/
 
 .content {
-    background: @white;
-    border-bottom: 1px solid @silver;
+    background: @silver-light;
+    //border-bottom: 1px solid @silver;
     border-top: 1px solid @silver;
     border-radius: 0;
-    box-shadow: -3px 3px 3px -2px @white-darker;
+    box-shadow: -3px 0px 3px -2px @silver-dark;
     
     display: inline-block;
     margin: 0;
